Creating a KafkaService, RedisCacheService bot application